fix: 修改消息和文件查询repository，添加principle.name条件